[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/player/key_k.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/player/skill_cooldown.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/player/skill_border.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/player/skill_sample.png" type="Texture" id=4]
[ext_resource path="res://src/ui/player/BaseSkillTrigger.gd" type="Script" id=5]

[node name="BaseSkillTrigger" type="VBoxContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -148.0
margin_right = 164.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TriggerProgress" type="TextureProgress" parent="."]
margin_right = 164.0
margin_bottom = 101.0
value = 30.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 3

[node name="CooldownLabel" type="Label" parent="TriggerProgress"]
margin_right = 166.0
margin_bottom = 101.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "10.0"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TriggerKey" type="CenterContainer" parent="."]
margin_top = 105.0
margin_right = 164.0
margin_bottom = 148.0

[node name="TriggerKeyTexture" type="TextureRect" parent="TriggerKey"]
margin_left = 60.0
margin_right = 103.0
margin_bottom = 43.0
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
